--- a/base-rollout/templates/service.yaml
+++ b/base-rollout/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "manager-rollout.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "manager-rollout.labels" . | nindent 4 }}
 spec:
