--- a/istio-rollout/templates/gateway.yaml
+++ b/istio-rollout/templates/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: rollouts-demo-gateway
+  name: {{ .Values.name }}-gateway
 spec:
   selector:
     istio: ingressgateway # use istio default controller
