--- a/istio-rollout/templates/service.yaml
+++ b/istio-rollout/templates/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rollouts-demo-canary
+  name: {{ .Values.name }}-canary
+  namespace: {{ .Values.namespace }}
 spec:
   ports:
     - port: 80
@@ -9,7 +10,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: rollouts-demo
+    app: {{ .Values.name }}
     # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
     # rollouts-pod-template-hash: 7bf84f9696
 
@@ -17,7 +18,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: rollouts-demo-stable
+  name: {{ .Values.name }}-stable
+  namespace: {{ .Values.namespace }}
 spec:
   ports:
     - port: 80
@@ -25,6 +27,6 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: rollouts-demo
+    app: {{ .Values.name }}
     # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
     # rollouts-pod-template-hash: 789746c88d
