--- a/istio-rollout/templates/rollout.yaml
+++ b/istio-rollout/templates/rollout.yaml
@@ -12,16 +12,15 @@ spec:
       trafficRouting:
         istio:
           virtualServices:
-            - name: {{ .Values.name }}-vsvc1 # At least one virtualService is required
+            - name: {{ .Values.name }} # At least one virtualService is required
               routes:
                 - primary # At least one route is required
-            - name: {{ .Values.name }}-vsvc2
-              routes:
-                - secondary # At least one route is required
       steps:
-        - setWeight: 5
+        - setWeight: 10
+        - pause: { duration: 1m }
+        - setWeight: 50
         - pause: {}
-  revisionHistoryLimit: 2
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: {{ .Values.name }}
@@ -33,7 +32,7 @@ spec:
     spec:
       containers:
         - name: {{ .Values.name }}
-          image: {{ .Values.name }}
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           ports:
             - name: http
               containerPort: 5000
