--- a/alb-rollout/templates/ingress.yaml
+++ b/alb-rollout/templates/ingress.yaml
@@ -7,6 +7,8 @@ metadata:
     kubernetes.io/ingress.class: "gce"
     kubernetes.io/ingress.allow-http: "true"
 spec:
+  tls:
+    - secretName: jieumjongsoo-cert
   ingressClassName: "gce"
   rules:
     - http:
@@ -15,6 +17,6 @@ spec:
             pathType: "Prefix"
             backend:
               service:
-                name: {{ .Values.name }}-root
+                name: {{ .Values.name }}
                 port:
                   number: 80
