--- a/alb-rollout/templates/service.yaml
+++ b/alb-rollout/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-root
+  name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
 spec:
   type: NodePort
@@ -12,39 +12,3 @@ spec:
       name: http
   selector:
     app: {{ .Values.name }}
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Values.name }}-canary
-  namespace: {{ .Values.namespace }}
-spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 5000
-      protocol: TCP
-      name: http
-  selector:
-    app: {{ .Values.name }}
-    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
-    # rollouts-pod-template-hash: 7bf84f9696
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Values.name }}-stable
-  namespace: {{ .Values.namespace }}
-spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 5000
-      protocol: TCP
-      name: http
-  selector:
-    app: {{ .Values.name }}
-    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
-    # rollouts-pod-template-hash: 789746c88d
